// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Spreadsheet pivot side panel It should correctly be displayed 1`] = `
<div
  class="o-sidePanel h-100 bg-white border-top border-start"
>
  <div
    class="o-sidePanelHeader d-flex align-items-center justify-content-between border-bottom"
  >
    <div
      class="o-collapse-panel o-sidePanelAction rounded"
    >
      <i
        class="fa fa-angle-double-right"
      />
    </div>
    
    <div
      class="o-sidePanelTitle o-fw-bold ms-2"
    >
      Pivot #1
    </div>
    <div
      class="o-pin-panel o-sidePanelAction ms-auto rounded"
      title="Pin this panel to allow to open another side panel beside it."
    >
      <i
        class="fa fa-thumb-tack"
      />
    </div>
    
    <div
      class="o-sidePanelClose o-sidePanelAction rounded"
    >
       ✕ 
    </div>
  </div>
  <div
    class="o-sidePanelBody-container d-flex flex-grow-1 "
  >
    <div
      class="o-sidePanel-handle-container"
    >
      <div
        class="o-sidePanel-handle"
      >
        <svg
          class="o-icon"
          fill="currentColor"
          viewBox="0 0 4 16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="2"
            cy="3.5"
            r="1"
          />
          <circle
            cx="2"
            cy="6.5"
            r="1"
          />
          <circle
            cx="2"
            cy="9.5"
            r="1"
          />
          <circle
            cx="2"
            cy="12.5"
            r="1"
          />
        </svg>
      </div>
    </div>
    <div
      class="o-sidePanelBody"
    >
      <div
        class="d-flex flex-column h-100"
      >
        <div
          class="o-panel d-flex"
        >
          <div
            class="o-sidePanel-tab o-panel-configuration d-flew flex-grow-1 text-center"
          >
            <i
              class="fa fa-sliders me-1"
            />
             Configuration 
          </div>
          <div
            class="o-sidePanel-tab o-panel-design d-flew flex-grow-1 text-center inactive"
          >
            <i
              class="fa fa-paint-brush me-1"
            />
             Design 
          </div>
        </div>
        <div
          class="o-panel-content overflow-y-auto h-100"
        >
          <div>
            <div
              class="d-flex flex-column h-100 justify-content-between overflow-hidden"
            >
              <div
                class="h-100 position-relative overflow-x-hidden overflow-y-auto"
              >
                <div>
                  <div
                    class="o-section"
                  >
                    <div
                      class="o-section-title"
                    >
                      
                      <div
                        class="d-flex flex-row justify-content-between align-items-center"
                      >
                         Name 
                        <span
                          class="fa fa-cog os-cog-wheel-menu-icon o-button-icon"
                        />
                        
                        
                      </div>
                      
                    </div>
                    
                    <div
                      class="position-relative"
                    >
                      <input
                        class="os-pivot-title w-100 os-input"
                        type="text"
                      />
                      
                    </div>
                    
                  </div>
                  
                  <div
                    class="o-section"
                  >
                    <div
                      class="o-section-title"
                    >
                      Range
                      
                      
                    </div>
                    
                    <div
                      class="o-selection"
                    >
                      <div
                        class="o-selection-input d-flex flex-row"
                      >
                        
                        <div
                          class="position-relative w-100"
                        >
                          <input
                            class="o-input mb-2"
                            placeholder="e.g. A1:A2"
                            spellcheck="false"
                            style=""
                            type="text"
                          />
                          
                          
                        </div>
                        
                      </div>
                      
                      
                      <div
                        class="d-flex flex-row w-100 o-selection-input"
                      >
                        
                        
                      </div>
                    </div>
                    
                    
                  </div>
                  
                  <div
                    class="pivot-dimensions o-section"
                  >
                    <div
                      class="o-fw-bold py-1 d-flex flex-row justify-content-between align-items-center o-section-title"
                    >
                       Columns 
                      <button
                        class="add-dimension o-button"
                      >
                        Add
                      </button>
                      
                      
                    </div>
                    
                    
                    <div
                      class="o-fw-bold pt-4 pb-1 d-flex flex-row justify-content-between align-items-center o-section-title"
                    >
                       Rows 
                      <button
                        class="add-dimension o-button"
                      >
                        Add
                      </button>
                      
                      
                    </div>
                    
                    
                    <div
                      class="o-fw-bold pt-4 pb-1 d-flex flex-row justify-content-between align-items-center o-section-title o-pivot-measure"
                    >
                       Measures 
                      <button
                        class="add-dimension o-button"
                      >
                        Add
                      </button>
                      
                      
                    </div>
                    
                    
                  </div>
                  
                  
                </div>
              </div>
              <div
                class="o-section align-items-center border-top d-flex flex-row justify-content-between py-1 pivot-defer-update"
              >
                
                <label
                  class="o-checkbox d-flex align-items-center"
                  role="button"
                  title="Changing the pivot definition requires to reload the data. It may take some time."
                >
                  <input
                    class="me-2 flex-shrink-0 border"
                    type="checkbox"
                  />
                  <span
                    class="text-truncate"
                  >
                    Defer updates
                  </span>
                  
                </label>
                
                
              </div>
              
            </div>
          </div>
          <div
            class="d-none"
          >
            <div
              class="o-section o-pivot-design"
            >
              <div
                class="o-section-title"
              >
                Display options
                
                
              </div>
              
              <div>
                <div
                  class="container-fluid p-0 pt-2"
                >
                  <div
                    class="row mb-2 align-items-center"
                  >
                    <div
                      class="col-6"
                    >
                      Max rows:
                    </div>
                    <div
                      class="col-6 d-flex align-items-center"
                    >
                      <input
                        class="o-pivot-n-of-rows o-input"
                        placeholder="e.g. 10"
                        type="number"
                      />
                    </div>
                  </div>
                  <div
                    class="row mb-2 align-items-center"
                  >
                    <div
                      class="col-6"
                    >
                      Max columns:
                    </div>
                    <div
                      class="col-6 d-flex align-items-center"
                    >
                      <input
                        class="o-pivot-n-of-columns o-input"
                        placeholder="e.g. 5"
                        type="number"
                      />
                    </div>
                  </div>
                  <div
                    class="row mb-2 align-items-center"
                  >
                    <div
                      class="col-6"
                    >
                      Show totals:
                    </div>
                    <div
                      class="col-6 d-flex align-items-center"
                    >
                      <label
                        class="o-checkbox d-flex align-items-center"
                        role="button"
                      >
                        <input
                          class="me-2 flex-shrink-0 border"
                          name="displayTotals"
                          type="checkbox"
                        />
                        
                      </label>
                    </div>
                  </div>
                  <div
                    class="row mb-2 align-items-center"
                  >
                    <div
                      class="col-6"
                    >
                      Show column titles:
                    </div>
                    <div
                      class="col-6 d-flex align-items-center"
                    >
                      <label
                        class="o-checkbox d-flex align-items-center"
                        role="button"
                      >
                        <input
                          class="me-2 flex-shrink-0 border"
                          name="displayColumnHeaders"
                          type="checkbox"
                        />
                        
                      </label>
                    </div>
                  </div>
                  <div
                    class="row mb-2 align-items-center"
                  >
                    <div
                      class="col-6"
                    >
                      Show measure titles:
                    </div>
                    <div
                      class="col-6 d-flex align-items-center"
                    >
                      <label
                        class="o-checkbox d-flex align-items-center"
                        role="button"
                      >
                        <input
                          class="me-2 flex-shrink-0 border"
                          name="displayMeasuresRow"
                          type="checkbox"
                        />
                        
                      </label>
                    </div>
                  </div>
                </div>
              </div>
              
            </div>
          </div>
        </div>
      </div>
    </div>
    
  </div>
</div>
`;

exports[`Spreadsheet pivot side panel It should display only the selection input when the dataSet is not valid 1`] = `
<div
  class="o-sidePanel h-100 bg-white border-top border-start"
>
  <div
    class="o-sidePanelHeader d-flex align-items-center justify-content-between border-bottom"
  >
    <div
      class="o-collapse-panel o-sidePanelAction rounded"
    >
      <i
        class="fa fa-angle-double-right"
      />
    </div>
    
    <div
      class="o-sidePanelTitle o-fw-bold ms-2"
    >
      Pivot #1
    </div>
    <div
      class="o-pin-panel o-sidePanelAction ms-auto rounded"
      title="Pin this panel to allow to open another side panel beside it."
    >
      <i
        class="fa fa-thumb-tack"
      />
    </div>
    
    <div
      class="o-sidePanelClose o-sidePanelAction rounded"
    >
       ✕ 
    </div>
  </div>
  <div
    class="o-sidePanelBody-container d-flex flex-grow-1 "
  >
    <div
      class="o-sidePanel-handle-container"
    >
      <div
        class="o-sidePanel-handle"
      >
        <svg
          class="o-icon"
          fill="currentColor"
          viewBox="0 0 4 16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="2"
            cy="3.5"
            r="1"
          />
          <circle
            cx="2"
            cy="6.5"
            r="1"
          />
          <circle
            cx="2"
            cy="9.5"
            r="1"
          />
          <circle
            cx="2"
            cy="12.5"
            r="1"
          />
        </svg>
      </div>
    </div>
    <div
      class="o-sidePanelBody"
    >
      <div
        class="d-flex flex-column h-100"
      >
        <div
          class="o-panel d-flex"
        >
          <div
            class="o-sidePanel-tab o-panel-configuration d-flew flex-grow-1 text-center"
          >
            <i
              class="fa fa-sliders me-1"
            />
             Configuration 
          </div>
          <div
            class="o-sidePanel-tab o-panel-design d-flew flex-grow-1 text-center inactive"
          >
            <i
              class="fa fa-paint-brush me-1"
            />
             Design 
          </div>
        </div>
        <div
          class="o-panel-content overflow-y-auto h-100"
        >
          <div>
            <div
              class="d-flex flex-column h-100 justify-content-between overflow-hidden"
            >
              <div
                class="h-100 position-relative overflow-x-hidden overflow-y-auto"
              >
                <div>
                  <div
                    class="o-section"
                  >
                    <div
                      class="o-section-title"
                    >
                      
                      <div
                        class="d-flex flex-row justify-content-between align-items-center"
                      >
                         Name 
                        <span
                          class="fa fa-cog os-cog-wheel-menu-icon o-button-icon"
                        />
                        
                        
                      </div>
                      
                    </div>
                    
                    <div
                      class="position-relative"
                    >
                      <input
                        class="os-pivot-title w-100 os-input"
                        type="text"
                      />
                      
                    </div>
                    
                  </div>
                  
                  <div
                    class="o-section"
                  >
                    <div
                      class="o-section-title"
                    >
                      Range
                      
                      
                    </div>
                    
                    <div
                      class="o-selection"
                    >
                      <div
                        class="o-selection-input d-flex flex-row"
                      >
                        
                        <div
                          class="position-relative w-100"
                        >
                          <input
                            class="o-input mb-2 o-focused o-invalid border-danger position-relative"
                            placeholder="e.g. A1:A2"
                            spellcheck="false"
                            style=""
                            type="text"
                          />
                          <span
                            class="input-icon text-danger position-absolute d-flex align-items-center"
                            title="This range is invalid"
                          >
                            <div
                              class="o-icon"
                            >
                              <i
                                class="fa fa-exclamation-circle"
                              />
                            </div>
                          </span>
                          
                          
                        </div>
                        
                      </div>
                      
                      
                      <div
                        class="d-flex flex-row w-100 o-selection-input"
                      >
                        
                        <div
                          class="ms-auto"
                        >
                          <button
                            class="o-button o-selection-ko"
                          >
                             Reset 
                          </button>
                          
                          <button
                            class="o-button primary ms-2 o-selection-ok"
                          >
                             Confirm 
                          </button>
                          
                        </div>
                        
                      </div>
                    </div>
                    <span
                      class="text-danger sp_range_error_message"
                    >
                      The pivot cannot be created because the dataset is missing.
                    </span>
                    
                  </div>
                  
                  
                </div>
              </div>
              <div
                class="o-section align-items-center border-top d-flex flex-row justify-content-between py-1 pivot-defer-update"
              >
                
                <label
                  class="o-checkbox d-flex align-items-center"
                  role="button"
                  title="Changing the pivot definition requires to reload the data. It may take some time."
                >
                  <input
                    class="me-2 flex-shrink-0 border"
                    type="checkbox"
                  />
                  <span
                    class="text-truncate"
                  >
                    Defer updates
                  </span>
                  
                </label>
                
                
              </div>
              
            </div>
          </div>
          <div
            class="d-none"
          >
            <div
              class="o-section o-pivot-design"
            >
              <div
                class="o-section-title"
              >
                Display options
                
                
              </div>
              
              <div>
                <div
                  class="container-fluid p-0 pt-2"
                >
                  <div
                    class="row mb-2 align-items-center"
                  >
                    <div
                      class="col-6"
                    >
                      Max rows:
                    </div>
                    <div
                      class="col-6 d-flex align-items-center"
                    >
                      <input
                        class="o-pivot-n-of-rows o-input"
                        placeholder="e.g. 10"
                        type="number"
                      />
                    </div>
                  </div>
                  <div
                    class="row mb-2 align-items-center"
                  >
                    <div
                      class="col-6"
                    >
                      Max columns:
                    </div>
                    <div
                      class="col-6 d-flex align-items-center"
                    >
                      <input
                        class="o-pivot-n-of-columns o-input"
                        placeholder="e.g. 5"
                        type="number"
                      />
                    </div>
                  </div>
                  <div
                    class="row mb-2 align-items-center"
                  >
                    <div
                      class="col-6"
                    >
                      Show totals:
                    </div>
                    <div
                      class="col-6 d-flex align-items-center"
                    >
                      <label
                        class="o-checkbox d-flex align-items-center"
                        role="button"
                      >
                        <input
                          class="me-2 flex-shrink-0 border"
                          name="displayTotals"
                          type="checkbox"
                        />
                        
                      </label>
                    </div>
                  </div>
                  <div
                    class="row mb-2 align-items-center"
                  >
                    <div
                      class="col-6"
                    >
                      Show column titles:
                    </div>
                    <div
                      class="col-6 d-flex align-items-center"
                    >
                      <label
                        class="o-checkbox d-flex align-items-center"
                        role="button"
                      >
                        <input
                          class="me-2 flex-shrink-0 border"
                          name="displayColumnHeaders"
                          type="checkbox"
                        />
                        
                      </label>
                    </div>
                  </div>
                  <div
                    class="row mb-2 align-items-center"
                  >
                    <div
                      class="col-6"
                    >
                      Show measure titles:
                    </div>
                    <div
                      class="col-6 d-flex align-items-center"
                    >
                      <label
                        class="o-checkbox d-flex align-items-center"
                        role="button"
                      >
                        <input
                          class="me-2 flex-shrink-0 border"
                          name="displayMeasuresRow"
                          type="checkbox"
                        />
                        
                      </label>
                    </div>
                  </div>
                </div>
              </div>
              
            </div>
          </div>
        </div>
      </div>
    </div>
    
  </div>
</div>
`;
